# llm_chains_tutorial

./: .gitignore  README.md  pyproject.toml
codes/: 0_check_gemini_models.py  10_use_chatgpt_instead_gemini.py  11_llm_params.py  12_set_llm_cache.py  13_token_counting.py  14_async.py  15_app.py  15_app2.py  16_check_langfuse.py  17_langfuse_test.py  1_zero_shot.py  2_few_shot.py  3_chain_of_thoughts.py  4_basic_chain.py  5_sequential_chain.py  6_router_chains.py  7_memory.py  8_structured_output.py  9_debug.py  my_study_plan.json
competition/disaster_tweet/: 1_EDA.py  2_preprocessing.py  3_base_model.py  4_llm_model.py
